end of class commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<head>
+	<link type="text/css" href="css/style.css" rel="stylesheet">
+</head>
+
 <h1>this is my SASS repository</h1>
+
+<nav class="nav">
+<ul>
+<li><a href="">Item 1</a></li>
+<li>Item 2</li>
+<li>Item 3</li>
+</ul>
+</nav>
+<footer>
+	<p>Copywrite</p>
+</footer>
